samples/_failures_safe/1761314595_100b46_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52aa6599.c: In function ‘main’:
./samples/SAFE/__tmp_52aa6599.c:129:9: error: expected declaration or statement at end of input
  129 |         case OP_MULTIPLY: {
      |         ^~~~
./samples/SAFE/__tmp_52aa6599.c:129:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_52aa6599.c:129:9: error: expected declaration or statement at end of input
